--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </head>
 <body>
     <label for="rub">RUB</label>
-    <input  type="text" id="rub">
+    <input  type="number" id="rub">
     <label for="usd">USD</label>
-    <input  type="text" id="usd">
+    <input  type="number" id="usd">
     <script src="script.js"></script>
 </body>
 </html>
